Practicas/Practica5/YAMLs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamflix-ingress
spec:
  rules:
  - host: "streamflix1.dyd.eus"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: streamflix-service
            port:
              number: 80
  - host: "streamflix2.dyd.eus"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: streamflix-service2
            port:
              number: 80
